# libffmpegxx

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/avcodec/: CMakeLists.txt  decoding.cpp
examples/avcodec/decoding/: CMakeLists.txt  decoding.cpp
examples/avcodec/transcoding/: CMakeLists.txt  transcoding.cpp
examples/avformat/: CMakeLists.txt  demuxer.cpp  remuxing.cpp
examples/avpacket/: CMakeLists.txt  avpacket.cpp
examples/logger/: CMakeLists.txt  logger.cpp
examples/timestamp/: CMakeLists.txt  timestamp.cpp
examples/version/: CMakeLists.txt  version.cpp
include/: LoggerImpl.h  ffmpegxx_config.h
include/public/: Logger.h
include/public/utils/: Rational.h
include/public/utils/time/: Timestamp.h  time_defs.h
include/utils/: LoggerApi.h
libffmpegxx/: CMakeLists.txt  LoggerImpl.cpp  Version.cpp  libffmpegxx_config.h.in  version.cpp
libffmpegxx/avcodec/: AVCodecPar.cpp  AVPacketImpl.cpp  DecoderImpl.cpp  EncoderImpl.cpp
libffmpegxx/avformat/: DemuxerImpl.cpp  MediaInfoFactory.cpp  MuxerImpl.cpp  stream_init.cpp  stream_utils.cpp
libffmpegxx/avutil/: AVFrameImpl.cpp
libffmpegxx/include/avcodec/: AVPacketImpl.h  DecoderImpl.h  EncoderImpl.h
libffmpegxx/include/avformat/: DemuxerImpl.h  MediaInfoFactory.h  MuxerImpl.h
libffmpegxx/include/avutil/: AVFrameImpl.h
libffmpegxx/include/public/avcodec/: AVCodecPar.h  IAVPacket.h  IDecoder.h  IEncoder.h
libffmpegxx/include/public/avformat/: IDemuxer.h  IMuxer.h  MediaInfo.h
libffmpegxx/include/public/avutil/: IAVFrame.h
libffmpegxx/include/public/time/: Timebase.h  Timestamp.h  time_defs.h
libffmpegxx/include/public/utils/: AVOptions.h  Logger.h  Rational.h  Version.h
libffmpegxx/include/utils/: LoggerApi.h  LoggerImpl.h  exception.h
libffmpegxx/time/: Timebase.cpp  Timestamp.cpp
libffmpegxx/utils/: LoggerImpl.cpp  Rational.cpp  Timestamp.cpp  Version.cpp  avoptions_util.cpp
